[package]
name = "mau-masak-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://_doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb ="1.2.2"
actix-web = "3.3.2"
actix-rt = "2.2.0"
bson = "1.2.3"
serde = "1.0.127"
futures = "0.3.16"
env_logger = "0.9.0"
dotenv = "0.15.0"
actix-cors = "0.5.4"
serde_json = "1.0.66"
chrono = "0.4"
bcrypt = "0.10.1"
jsonwebtoken = "7"
regex = "1"
validator = { version = "0.12", features = ["derive"] }